setup config files to be used for experiments in file doc_retr

--- a/_10_scripts/_10_document_retrieval/Untitled.ipynb
+++ b/_10_scripts/_10_document_retrieval/Untitled.ipynb
@@ -26,6 +26,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\\\k'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import config\n",
+    "import json\n",
+    "\n",
+    "experiment_nr = 1\n",
+    "file_name = 'experiment_%.2d.json'%(experiment_nr)\n",
+    "path_experiment = os.path.join(config.ROOT, config.CONFIG_DIR, file_name)\n",
+    "\n",
+    "with open(path_experiment) as json_data_file:\n",
+    "    data = json.load(json_data_file)\n",
+    "data['delimiter']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -229,18 +258,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
   }
  },
  "nbformat": 4,
