new experiments and database total tf idf

--- a/_10_scripts/_10_document_retrieval/document_retrieval_notebook.ipynb
+++ b/_10_scripts/_10_document_retrieval/document_retrieval_notebook.ipynb
@@ -180,6 +180,117 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_tmp = {}\n",
+    "dict_tmp[1]={}\n",
+    "dict_tmp[1][2]=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_jsonl(filename):\n",
+    "    # description: only use for wikipedia dump\n",
+    "    d_list = []\n",
+    "    with open(filename, encoding='utf-8', mode='r') as in_f:\n",
+    "#         print(\"Load Jsonl:\", filename)\n",
+    "        for line in in_f:\n",
+    "            item = json.loads(line.strip())\n",
+    "            d_list.append(item)\n",
+    "\n",
+    "    return d_list\n",
+    "\n",
+    "def write_jsonl(filename, file):\n",
+    "    with open(filename, encoding='utf-8', mode='w') as outfile:\n",
+    "        for line in file:\n",
+    "            json.dump(line, outfile, ensure_ascii=False)\n",
+    "            outfile.write(\"\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = '/home/bmelman/Desktop/C_disk/02_university/06_thesis/01_code/fever/_01_data/_01_raw_data/dev.jsonl'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = load_jsonl(path)\n",
+    "file_write_name = 'tmp.jsonl'\n",
+    "write_jsonl(file_write_name, results)\n",
+    "results2 = load_jsonl(file_write_name)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 91198,\n",
+       " 'verifiable': 'NOT VERIFIABLE',\n",
+       " 'label': 'NOT ENOUGH INFO',\n",
+       " 'claim': 'Colin Kaepernick became a starting quarterback during the 49ers 63rd season in the National Football League.',\n",
+       " 'evidence': [[[108548, None, None, None]]]}"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results2[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 91198,\n",
+       " 'verifiable': 'NOT VERIFIABLE',\n",
+       " 'label': 'NOT ENOUGH INFO',\n",
+       " 'claim': 'Colin Kaepernick became a starting quarterback during the 49ers 63rd season in the National Football League.',\n",
+       " 'evidence': [[[108548, None, None, None]]]}"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 65,
    "metadata": {
     "collapsed": true
@@ -286,13 +397,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NNP Jo\n",
+      "NNP Man\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "\n",
-    "nlp = spacy.load('en', disable=[\"parser\", \"ner\"])\n"
+    "nlp = spacy.load('en', disable=[\"parser\", \"ner\"])\n",
+    "doc = nlp('Jo Man')\n",
+    "for word in doc:\n",
+    "    print(word.tag_, word.text)"
    ]
   },
   {
@@ -301,7 +424,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = 'Jo is looking at buying U.K. startups (for $1 billion) in 1980-89.'\n",
+    "text = 'Jo Man'\n",
     "# list_new = [text+text+text+text+text+text+text+text for i in range(1000000)]\n",
     "list_new = []\n",
     "for i in range(1000000):\n",
