total tf_idf rewritten

--- a/_10_scripts/_10_document_retrieval/document_retrieval_notebook.ipynb
+++ b/_10_scripts/_10_document_retrieval/document_retrieval_notebook.ipynb
@@ -23,6 +23,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dictionary  ={}\n",
+    "nr_elements = 10000000\n",
+    "for i in range(nr_elements):\n",
+    "    dictionary[i]=1.0912312"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
    "outputs": [],
