--- a/_10_scripts/_10_document_retrieval/document_retrieval_notebook.ipynb
+++ b/_10_scripts/_10_document_retrieval/document_retrieval_notebook.ipynb
@@ -23,14 +23,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 123,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "MemoryError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-123-c0554b246ba2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mnr_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mnr_scores\u001b[0m\u001b[0;34m^\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mnr_observations\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnr_claims\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mnr_observations_per_claim\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mmatrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnr_features\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnr_observations\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m   \u001b[0;31m# Create an array of all zeros\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mMemoryError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
-    "dictionary  ={}\n",
-    "nr_elements = 10000000\n",
-    "for i in range(nr_elements):\n",
-    "    dictionary[i]=1.0912312"
+    "import numpy as np\n",
+    "\n",
+    "nr_scores = 3\n",
+    "nr_claims = 10000\n",
+    "nr_observations_per_claim = 6000\n",
+    "nr_features = 5*nr_scores^2\n",
+    "nr_observations = nr_claims*nr_observations_per_claim\n",
+    "matrix = np.zeros((nr_features, nr_observations))   # Create an array of all zeros\n",
+    "\n",
+    "\n"
    ]
   },
   {
