new dictionary load for total tf idf

--- a/_10_scripts/_10_document_retrieval/document_retrieval_notebook.ipynb
+++ b/_10_scripts/_10_document_retrieval/document_retrieval_notebook.ipynb
@@ -103,6 +103,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = '/home/bmelman/Desktop/C_disk/02_university/06_thesis/01_code/fever/_04_results/vocab_title_1_t/thr_0.01_/ex_term_frequency_inverse_document_frequency_title/title_total_tf_idf.sqlite'\n",
+    "from utils_db import dict_save_json, dict_load_json\n",
+    "\n",
+    "dict_total = dict_load_json(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# max_i = 10\n",
+    "# i = 0\n",
+    "# for key, value in dict_total.items():\n",
+    "#     if i<max_i:\n",
+    "#         print(key, value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.4025254593544414"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_total['1']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
    "outputs": [
