--- a/_10_scripts/_10_document_retrieval/document_retrieval_notebook.ipynb
+++ b/_10_scripts/_10_document_retrieval/document_retrieval_notebook.ipynb
@@ -23,6 +23,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils_db import dict_save_json, dict_load_json, load_jsonl\n",
+    "path_dict = '/home/bmelman/Desktop/C_disk/02_university/06_thesis/01_code/fever/_01_data/_03_database/title_2_id.json' \n",
+    "dict_id_2_title = dict_load_json(path_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_id_2_title['1928_in_association_football']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 123,
    "metadata": {},
    "outputs": [
@@ -115,37 +146,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# max_i = 10\n",
-    "# i = 0\n",
-    "# for key, value in dict_total.items():\n",
-    "#     if i<max_i:\n",
-    "#         print(key, value)"
+    "from utils_db import dict_save_json, dict_load_json\n",
+    "\n",
+    "path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'aB'"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tmp = 'aB' + '\\q' + 'c'\n",
-    "\n",
-    "tmp.split('\\q')[0]"
+    "if 'a' in ['aa', 'ab']:\n",
+    "    print('lol')"
    ]
   },
   {
