wikipedia page str(id) fixed

--- a/_10_scripts/_10_document_retrieval/document_retrieval_notebook.ipynb
+++ b/_10_scripts/_10_document_retrieval/document_retrieval_notebook.ipynb
@@ -2501,22 +2501,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_dict = '/home/bmelman/Desktop/C_disk/02_university/06_thesis/01_code/fever/_01_data/_03_database/id_2_title.json'\n",
+    "dict = dict_load_json(path_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Simón_Bolívar'"
+       "'1986 NBA Finals'"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "id_list[460]"
+    "dict['1']"
    ]
   },
   {
