--- a/_10_scripts/_10_document_retrieval/document_retrieval_notebook.ipynb
+++ b/_10_scripts/_10_document_retrieval/document_retrieval_notebook.ipynb
@@ -149,6 +149,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wiki_database\n",
+      "- Load existing settings file\n",
+      "- Load title dictionary\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os \n",
+    "\n",
+    "from utils_db import HiddenPrints\n",
+    "from utils_doc_results_db import get_vocab_tf_idf_from_exp\n",
+    "\n",
+    "from vocabulary import VocabularySqlite\n",
+    "from tfidf_database import TFIDFDatabaseSqlite\n",
+    "from wiki_database import WikiDatabaseSqlite\n",
+    "\n",
+    "import config \n",
+    "\n",
+    "experiment_nr = 31\n",
+    "\n",
+    "path_wiki_pages = os.path.join(config.ROOT, config.DATA_DIR, config.WIKI_PAGES_DIR, 'wiki-pages')\n",
+    "path_wiki_database_dir = os.path.join(config.ROOT, config.DATA_DIR, config.DATABASE_DIR)\n",
+    "\n",
+    "wiki_database = WikiDatabaseSqlite(path_wiki_database_dir, path_wiki_pages)\n",
+    "\n",
+    "with HiddenPrints():\n",
+    "    vocab, tf_idf_db = get_vocab_tf_idf_from_exp(experiment_nr, wiki_database)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
