doc results Performance TFIDF class and doc_results for text

--- a/_10_scripts/_10_document_retrieval/document_retrieval_notebook.ipynb
+++ b/_10_scripts/_10_document_retrieval/document_retrieval_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,79 @@
     "\n",
     "import config"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "claim database\n",
+      "- claim database already exists\n"
+     ]
+    }
+   ],
+   "source": [
+    "# === constants === #\n",
+    "\n",
+    "# === variables === #\n",
+    "n_gram = 1\n",
+    "claim_data_set = 'dev'\n",
+    "folder_name_score_combination = 'score_combination'\n",
+    "\n",
+    "# === process === #\n",
+    "path_dir_results = os.path.join(config.ROOT, config.RESULTS_DIR, folder_name_score_combination)\n",
+    "path_tags = os.path.join(path_dir_results, 'tags_' + claim_data_set + '_n_gram_' + str(n_gram) + '.json')\n",
+    "\n",
+    "path_wiki_pages = os.path.join(config.ROOT, config.DATA_DIR, config.WIKI_PAGES_DIR, 'wiki-pages')\n",
+    "path_wiki_database_dir = os.path.join(config.ROOT, config.DATA_DIR, config.DATABASE_DIR)\n",
+    "\n",
+    "path_claim_data_set = os.path.join(config.ROOT, config.DATA_DIR, config.RAW_DATA_DIR, claim_data_set + \".jsonl\")\n",
+    "path_dir_claim_database = os.path.join(config.ROOT, config.DATA_DIR, config.DATABASE_DIR)\n",
+    "path_raw_data = os.path.join(config.ROOT, config.DATA_DIR, config.RAW_DATA_DIR)\n",
+    "\n",
+    "path_dir_claims = os.path.join(path_dir_results, claim_data_set)\n",
+    "\n",
+    "try:\n",
+    "    os.makedirs(path_dir_results, exist_ok=True)\n",
+    "except FileExistsError:\n",
+    "    print('folder already exists:', path_dir_results)\n",
+    "\n",
+    "try:\n",
+    "    os.makedirs(path_dir_claims, exist_ok=True)\n",
+    "except FileExistsError:\n",
+    "    print('folder already exists:', path_dir_claims)\n",
+    "\n",
+    "claim_database = ClaimDatabase(path_dir_database = path_dir_claim_database, path_raw_data = path_raw_data, claim_data_set = claim_data_set)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id = 4\n",
+    "claim = claim_database.get_claim_from_id(id)\n",
+    "document_name_list = claim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
