database wiki adapted for lines

--- a/_10_scripts/_10_document_retrieval/neural_network.ipynb
+++ b/_10_scripts/_10_document_retrieval/neural_network.ipynb
@@ -14,7 +14,7 @@
     "import torch.optim as optim\n",
     "from torchvision import datasets, transforms\n",
     "\n",
-    "import config"
+    "import config\n"
    ]
   },
   {
@@ -362,8 +362,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "# https://stanford.edu/~shervine/blog/pytorch-how-to-generate-data-parallel\n",
     "# === constants === #\n",
     "\n",
@@ -376,7 +374,7 @@
     "settings_model['use_cuda'] = False\n",
     "settings_model['seed'] = 1\n",
     "settings_model['lr'] = 0.001\n",
-    "settings_model['momentum'] = 0.9 #0.5\n",
+    "settings_model['momentum'] = 0.9 # 0.5\n",
     "settings_model['params'] = {'batch_size': 64, 'shuffle': True}\n",
     "settings_model['nr_epochs'] = 5\n",
     "settings_model['log_interval'] = 10\n",
@@ -384,7 +382,6 @@
     "neural_network = NeuralNetwork(claim_data_set, method_database, setup, settings_model)\n",
     "    \n",
     "model = neural_network.model\n",
-    "\n",
     "# for every \n",
     "\n",
     "\n"
@@ -535,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -565,7 +562,7 @@
     "\n",
     "X = torch.load(file_name_variables)\n",
     "y = torch.load(file_name_label)\n",
-    "y,X"
+    "y, X"
    ]
   },
   {
@@ -619,13 +616,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
    "outputs": [
@@ -648,6 +638,41 @@
     "torch.save(tensor_temp, 'tmp.pt')\n",
     "torch.load('tmp.pt')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
